[gd_scene load_steps=3 format=3 uid="uid://dg24yqelnbruy"]

[ext_resource type="Script" path="res://other/gd/Menu.gd" id="1_hp1lu"]
[ext_resource type="Texture2D" uid="uid://lvycvasr32l2" path="res://Asset/Background/For the page/White.svg" id="2_wnbrm"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hp1lu")

[node name="Panel" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wnbrm")
expand_mode = 1

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = -25.0
offset_right = 225.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Open_setting_server" type="Button" parent="BoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Создать сервер"

[node name="Open_personal_account" type="Button" parent="BoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Личный кабинет"

[node name="Client_disconnect_in_server_system" type="Button" parent="BoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Выйти из сервера"

[connection signal="pressed" from="BoxContainer/Open_setting_server" to="." method="_open_setting_server"]
[connection signal="pressed" from="BoxContainer/Open_personal_account" to="." method="_open_personal_account"]
[connection signal="pressed" from="BoxContainer/Client_disconnect_in_server_system" to="." method="client_disconnect_in_server_system"]
